<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DetailAnimalsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/iv_item_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            tools:srcCompat= "@tools:sample/avatars"
            android:contentDescription="thumbnail image"
            android:adjustViewBounds="true">
        </ImageView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/animals_name"
            android:textSize="25dp"
            android:textStyle="bold"
            android:gravity="center"
            android:id="@+id/tv_item_name">

        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/animals_food"
            android:textSize="16sp"
            android:id="@+id/tv_item_food">

        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/animals_description"
            android:textSize="14sp"
            android:layout_marginTop="16dp"
            android:id="@+id/tv_item_description">

        </TextView>

    </LinearLayout>

</ScrollView>