<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.UserActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textSize="45dp"
        android:text="@string/profile_user"
        android:textStyle="italic"
        android:id="@+id/tv_profile">

    </TextView>

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/userk"
        android:layout_gravity="center_horizontal"
        android:id="@+id/iv_profile">


    </de.hdodenhof.circleimageview.CircleImageView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="25dp"
        android:text="@string/username_id"
        android:textStyle="bold"
        android:gravity="center"
        android:id="@+id/tv_username">

    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="25dp"
        android:text="@string/email_user"
        android:textStyle="bold"
        android:gravity="center"
        android:id="@+id/tv_email">

    </TextView>





</androidx.appcompat.widget.LinearLayoutCompat>